--- a/recipe-finder/package.json
+++ b/recipe-finder/package.json
@@ -3,10 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "bootstrap": "^4.6.0",
     "cra-template": "1.1.2",
     "react": "^17.0.1",
+    "react-bootstrap": "0.31.0",
     "react-dom": "^17.0.1",
-    "react-scripts": "4.0.3"
+    "react-redux": "^7.2.2",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "4.0.3",
+    "redux": "^4.0.5"
   },
   "scripts": {
     "start": "react-scripts start",
